manifest/kafka-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kafka-ui
  namespace: infra
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kafka.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: kafka.kubeop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
